# dataflow-mcp

./: .releaserc.json  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: dataflow-mcp.yml  release.yml
src/: main.rs  types.rs
src/tools/: kafka_connect.rs  manifest.rs  mod.rs  reference.rs
