[package]
name = "dataflow-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for DataFlow: generate manifests and migrate Kafka Connect to DataFlow"
license = "MIT"

[dependencies]
rmcp = { version = "0.14", features = ["server", "transport-io", "schemars"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "1", features = ["derive"] }